--- a/index.html
+++ b/index.html
@@ -79,7 +79,64 @@ const myCustomReviews = [
   "Excellent clinic with professional staff. Hair fall reduced within a few weeks.",
   "Skin treatment worked really well. Clinic is clean and staff is polite.",
   "Laser sessions were painless and effective. Overall experience was great.",
-  "Highly recommended clinic. Staff is supportive and treatment gives results."
+  "Highly recommended clinic. Staff is supportive and treatment gives results." , "Very professional clinic with polite staff. The treatment was explained clearly and results are visible.",
+"Excellent experience overall. The clinic is clean, well managed and staff is very supportive.",
+"Highly satisfied with the service. Doctor was knowledgeable and answered all my questions patiently.",
+"Great clinic with a calm environment. Treatment started showing results within a short time.",
+"Staff behavior was very good and the whole process was smooth and comfortable.",
+"One of the best clinics I have visited. Clean setup and professional treatment.",
+"Doctor explained the procedure in detail and the results are really impressive.",
+"Very happy with the treatment outcome. The staff made me feel comfortable throughout.",
+"Clinic is well maintained and service quality is excellent. Totally worth visiting.",
+"Professional approach, hygienic environment and effective treatment. Highly recommended." , "Clinic ka experience bahut accha raha. Staff polite tha aur treatment effective hai.",
+"Doctor ne sab kuch clearly explain kiya aur staff ka behavior bhi accha tha.",
+"Overall experience smooth raha. Clinic clean hai aur service time pe mili.",
+"Treatment ke results dikh rahe hain. Staff supportive aur friendly hai.",
+"Clinic ka environment calm hai aur consultation kaafi achi rahi.",
+"Doctor knowledgeable hain aur patiently sab sunte hain. Satisfied hun.",
+"Staff ka coordination accha tha aur visit bilkul hassle free rahi.",
+"Treatment ka result kaafi better hai. Clinic bilkul hygienic hai.",
+"Service quality acchi hai aur staff respectful hai. Accha experience raha.",
+"Clinic visit comfortable rahi aur process properly manage kiya gaya." , "Very smooth experience from consultation to treatment. Staff handled everything professionally.",
+"Clinic atmosphere is calm and clean. The treatment process was well explained.",
+"Doctor was friendly and gave proper guidance. Satisfied with the overall service.",
+"Good clinic with modern setup and helpful staff. Treatment quality is impressive.",
+"Results are better than expected. Staff support throughout the process was excellent.",
+"Clinic is hygienic and well organized. Doctor answered all doubts clearly.",
+"Professional service and polite staff. Overall experience was very positive.",
+"Treatment was comfortable and effective. Clinic maintenance is really good.",
+"Staff was attentive and cooperative. The whole visit felt well managed.",
+"Doctor explained the treatment step by step. Feeling confident with the results.",
+"Clinic visit was hassle free and smooth. Staff behavior was very professional.",
+"Very clean clinic with disciplined staff. Treatment quality is reliable.",
+"Doctor took time to understand the issue and suggested the right treatment.",
+"Overall experience was pleasant. Staff ensured comfort at every step.",
+"Clinic environment feels safe and calm. Treatment is showing good results.",
+"Staff was well trained and polite. Consultation experience was excellent.",
+"Professional clinic with proper hygiene and clear communication.",
+"Treatment sessions were smooth and well managed by the staff.",
+"Doctor guidance was accurate and easy to understand. Happy with the service.",
+"Clinic provides quality treatment with a professional approach. Recommended." ,
+   "Clinic ka overall experience kaafi accha raha. Staff helpful aur polite tha.",
+"Doctor ne problem ko achhe se samjha aur proper treatment suggest kiya.",
+"Visit bilkul smooth rahi. Clinic clean aur well maintained hai.",
+"Treatment ke results dheere dheere achhe dikh rahe hain. Satisfied hun.",
+"Staff ka behavior friendly tha aur process properly manage kiya gaya.",
+"Clinic ka environment calm hai aur waiting time bhi kam tha.",
+"Doctor ne patiently sab explain kiya. Accha experience raha.",
+"Treatment comfortable raha aur staff ka support accha tha.",
+"Clinic hygienic hai aur staff ka coordination kaafi acha hai.",
+"Overall visit hassle free rahi aur service quality acchi thi.",
+"Doctor knowledgeable hain aur guidance kaafi clear thi.",
+"Clinic visit ke dauran koi issue nahi hua. Smooth experience raha.",
+"Staff attentive tha aur har step pe guide kiya.",
+"Treatment ka result positive lag raha hai. Clinic acchi tarah se managed hai.",
+"Doctor aur staff dono professional hain. Satisfied feel kar raha hun.",
+"Clinic ka setup modern hai aur cleanliness maintain ki gayi hai.",
+"Visit comfortable thi aur staff ka approach respectful tha.",
+"Treatment start hone ke baad improvement feel ho raha hai.",
+"Clinic ka process simple aur organized hai. Accha laga.",
+"Overall experience positive raha. Staff supportive aur polite tha."
 ];
 
 /* AUTO REVIEW DATA */
